re PR rtl-optimization/16294 (Missed delay slot scheduling opportunity)

PR rtl-optimization/16294
	* resource.c (return_insn_p): New predicate.
	(mark_target_live_regs): Use it.  Special-case return insns.
	(init_resource_info): Use it.  Don't scan the epilogue past
	a return.

From-SVN: r84874